test/pass/strings_nd_arrays.min
program
    string hello := "hello" " " "world";
    number x[4] := 1, 2, 3, 4;
    string stuff := 92 91 "hehe"
start
end
