test/fail/array3.min
program
    array x[3] := 1
start
end                    
